@@ -6,11 +6,11 @@ package Atomic1 is
   type UA is access all Arr;
 
   U : UA;
-  pragma Atomic (U);  -- { dg-error "atomic access" }
+  pragma Atomic (U);  -- { dg-error "atomic access" "" { xfail mips*-*-* } }
 
   type R is record
     U : UA;
-    pragma Atomic (U);  -- { dg-error "atomic access" }
+    pragma Atomic (U);  -- { dg-error "atomic access" "" { xfail mips*-*-* } }
   end record;
 
 end Atomic1;
